no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -493,7 +493,7 @@ unicorn/expiring-todo-comments   ##Avoid comments like TODO|FIXME unless they ar
                                  ##  - engine:NAME@>SEMVER: against PACKAGE.engines[NAME]
                                  ##OPTS:
                                  ##  - terms STR_ARR (def: ['todo', 'fixme', 'xxx'])
-                                 ##  - allowWarningComments BOOL: if false (def), disable "no-warning-comments" rule
+                                 ##  - allowWarningComments BOOL (def: true): if false, disable "no-warning-comments" rule
                                  ##  - ignoreDatesOnPullRequests BOOL (def: false): disable YYYY-MM-DD when it's a PR
 
 eslint-comments/*                ##Module "eslint-plugin-eslint-comments" (3.1.2)
@@ -1528,7 +1528,7 @@ no-useless-concat                 #Avoid STR_LIT + STR2_LIT
 prefer-template                   #Avoid STR + STR2, prefer `...`
 no-template-curly-in-string       #Avoid ${} inside "" or ''
 
-unicorn/*                        ##Module "eslint-plugin-unicorn" (12.0.1)
+unicorn/*                        ##Module "eslint-plugin-unicorn" (12.0.2)
 unicorn/prefer-starts-ends-with  ##Must use STR.startsWith|endsWith() when possible
 unicorn/prefer-string-slice      ##Must use STR.slice() instead of STR.substr|substring()
 
