--- a/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
+++ b/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
@@ -1868,6 +1868,9 @@ Promise.allSettled(VAL|PROMISABLE_ITERABL) 12*-|#Same but instead:
                                            12*-|#     - status 'fulfilled|rejected'
                                            12*-|#     - value VAL2 (if resolved)
                                            12*-|#     - reason VAL2 (if rejected)
+Promise.any(VAL|PROMISABLE_ITERABLE)        *-|~#Same but instead:
+                                            *-|~#  - if any PROMISABLE resolved with VAL2 -> resolved with VAL2
+                                            *-|~#  - if all PROMISABLE rejected -> rejected with AGGREGATE_ERROR: errors VAL2_ARR
 
 async function [*] [FUNC](...) {...}          -|#Returns FUNC2(...)->PROMISE, where FUNC can:
 [class ...] { async [*] FUNC() {...} ... }    -|#  - return VAL -> resolve PROMISE with VAL
