no commit message

--- a/Languages/Static_analysis/Type_checking/TypeScript/Core/typescript.language.txt
+++ b/Languages/Static_analysis/Type_checking/TypeScript/Core/typescript.language.txt
@@ -837,6 +837,20 @@ TAGGED UNION ==>                  #When type guarding with OBJ.VAR:
 
                                              /=+===============================+=\
                                             /  :                               :  \
+                                            )==:          ASSERTIONS           :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
+
+asserts VAR [is TYPE]             #When used as FUNC return value's TYPE2 means:
+                                  #  - FUNC throws if VAR is not TYPE (def: true)
+                                  #  - FUNC returns void
+                                  #I.e. actual return TYPE2 is never|void
+                                  #FUNC is used as type guard too
+
+
+                                             /=+===============================+=\
+                                            /  :                               :  \
                                             )==:           NAMESPACE           :==(
                                             \  :_______________________________:  /
                                              \=+===============================+=/
