no commit message

--- a/Languages/Static_analysis/Type_checking/TypeScript/Core/typescript.language.txt
+++ b/Languages/Static_analysis/Type_checking/TypeScript/Core/typescript.language.txt
@@ -123,6 +123,8 @@ CONF.references                   #Sub-CONFs:
 --composite                       #Means the current CONF is a sub-CONF
                                   #Implies --declaration and --incremental
                                   #Sets --rootDir to the tsconfig.json's DIR
+--disableSourceOfProjectReference
+ Redirect                         #Unless defined, *.ts[x] are used instead of *.d.ts by IDE plugins for sub-CONFs
 
 -b|--build                        #Run tsc recursively on all CONF.references
                                   #tsc FILE... will instead be tsc CONF_PATH...
@@ -768,6 +770,7 @@ TRANSTYPING RULES ==>             #For TYPE2 <-- TYPE, TYPE2 must be contravaria
                                              \=+===============================+=/
 
 
+// @ts-[no]check                  #Use|ignore type checking on current file
 // @ts-ignore                     #Ignore type checking on next line.
                                   #Works in *.js too (if --checkJs)
 
@@ -834,19 +837,11 @@ TAGGED UNION ==>                  #When type guarding with OBJ.VAR:
                                   #  type B = { kind: 'B' }
                                   #  (obj: A|B) => obj.kind === 'A' && ... // `obj` will be of type A
 
-
-                                             /=+===============================+=\
-                                            /  :                               :  \
-                                            )==:          ASSERTIONS           :==(
-                                            \  :_______________________________:  /
-                                             \=+===============================+=/
-
-
-asserts VAR [is TYPE]             #When used as FUNC return value's TYPE2 means:
-                                  #  - FUNC throws if VAR is not TYPE (def: true)
-                                  #  - FUNC returns void
-                                  #I.e. actual return TYPE2 is never|void
-                                  #FUNC is used as type guard too
+asserts VAR [is TYPE]          3.7#When used as FUNC return value's TYPE2 means:
+                               3.7#  - FUNC throws if VAR is not TYPE (def: true)
+                               3.7#  - FUNC returns void
+                               3.7#I.e. actual return TYPE2 is never|void
+                               3.7#FUNC is used as type guard too
 
 
                                              /=+===============================+=\
@@ -1210,7 +1205,6 @@ DIFFERENCE FROM JAVASCRIPT ==>    #  - types: declarations, assertions, declare
                                   #Can do type assertions with JSDoc, which removes all differences above.
                                   #Also transpile *.js
 --checkJs                         #Also do type checking inside *.js
-// @ts-[no]check                  #Use|ignore --checkJs on current file
 --maxNodeModuleJsDepth NUM        #Run --allowJs (if enabled) on imported 'MODULE' (instead of only 'PATH') providing:
                                   #  - they are NUM levels deep in dependencies tree
                                   #  - no *.ts[x]|d.ts can be found
