no commit message

--- a/Languages/JavaScript/JavaScript_frameworks/View/One_way_data_binding/Virtual_DOM/React/react.javascript.txt
+++ b/Languages/JavaScript/JavaScript_frameworks/View/One_way_data_binding/Virtual_DOM/React/react.javascript.txt
@@ -612,7 +612,7 @@ TESTUTILS.Simulate.EVENT         ##Trigger EVENT, but still work with virtual DO
                                              \=+===============================+=/
 
 
-react/*                          ##Node module "eslint-plugin-react" (7.14.3)
+react/*                          ##Node module "eslint-plugin-react" (7.15.2)
                                  ##Can use CONF.settings.react:
                                  ##  - createClass 'FUNC' (def: 'createReactClass'): used to create RTYPE
                                  ##    when not using ES6 classes
@@ -625,7 +625,8 @@ react/prefer-es6-class [STR]     ##Requires either ES6 classes, or ES5 createRea
                                  ##STR: 'always' (def), 'never'
 react/no-this-in-fsc             ##No "this" in stateless component
 react/no-multi-comp [OBJ]        ##Avoid multiple RTYPE declarations per file
-                                 ##If OBJ.ignoreStateless true (def: false), allow if stateless components
+                                 ##OBJ:
+                                 ##  - ignoreStateless BOOL (def: false): allow if stateless components
 react/forbid-elements [OBJ]      ##Avoid using <RTYPE>, using OBJ.forbid OBJ_ARR: element 'RTYPE', message STR (error message),
                                  ##or shorthand 'RTYPE'_ARR
 
@@ -721,6 +722,7 @@ react/sort-comp [OBJ]            ##Enforce RTYPE properties sorting order
                                  ##     - 'type-annotations'
                                  ##     - 'instance-variables'
                                  ##     - 'instance-methods'
+                                 ##     - 'static-variables'
                                  ##  - groups.GROUP 'NAME'_ARR (order inside each group), with default for lifecyle:
                                  ##    'displayName', 'propTypes', 'contextTypes', 'childContextTypes', 'mixins',
                                  ##    'statics', 'defaultProps', 'constructor', 'getDefaultProps', 'state', 'getInitialState',
@@ -846,8 +848,8 @@ react/boolean-prop-naming [OBJ]  ##Requires PROPs with propTypes.VAR (OBJ.propT
                                  ##  - message STR: can use '{{propName}}' and '{{pattern}}'
                                  ##  - validateNested BOOL (def: false)
 react/jsx-handler-names [OBJ]    ##Requires PROPs naming for:
-                                 ##  - event handlers PROP: start with OBJ.eventHandlerPropPrefix STR (def: 'on')
-                                 ##  - event handlers PROP's value: start with OBJ.eventHandlerPrefix STR (def: 'handle')
+                                 ##  - event handlers PROP: start with OBJ.eventHandlerPropPrefix STR|BOOL (def: 'on')
+                                 ##  - event handlers PROP's value: start with OBJ.eventHandlerPrefix STR|BOOL (def: 'handle')
                                  ##E.g. onChange={this.handleChange}
 react/jsx-sort-props             ##Requires sorting PROPs
                                  ##OBJ:
@@ -873,13 +875,18 @@ react/jsx-no-bind [OBJ]          ##Avoid, according to OBJ:
                                  ##  - OBJ.ignoreRefs true (def: false): for ref={FUNC}
                                  ##  - OBJ.ignoreDOMComponents true (def: false): for onDOMEVENT
 react/jsx-no-literals [OBJ]      ##Requires <...>{'STR'}</...> instead of <...>STR</...>
-                                 ##If OBJ.noStrings true, forbids any literal STR in JSX, even outside {}
+                                 ##OBJ:
+                                 ##  - noStrings BOOL (def: false): forbids any literal STR in JSX, even outside {}
+                                 ##  - allowedStrings STR_ARR
 react/jsx-curly-brace-presence   ##Whether {} should be required ("always"), never allowed unless necessary ("never") or
  [OBJ]                           ##"ignore"
                                  ##Using OBJ: props STR, children STR
 react/jsx-fragments [STR]        ##Require JSX fragments to be:
                                  ##  - 'syntax': <>...</> (except if using 'key' JSX attribute)
                                  ##  - 'element': <React.Fragment>...</React.Fragment>
+react/jsx-no-useless-fragments   ##Avoid <>...</> if either it:
+                                 ##  - has only one child
+                                 ##  - is the child of a RDOM
 
 react/jsx-filename-
  extension [OBJ]                 ##Requires files containing JSX to have OBJ.extensions '.EXT'_ARR (def: '.jsx')
