no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -228,16 +228,24 @@ CALL.getPromiseIndex()->NUM                  12*#PROMISE index inside Promise.al
 NERROR                                          #Node internal error, as opposed to standard JavaScript ERROR
                                                 #Often filesystem errors, including permissions
 NERROR.code                                     #NERROR_NAME
-                                                #Most start with E* and are cross-OS. Some start with W* and are Windows-specific.
+                                                #Either:
+                                                #  - E*: cross-OS
+                                                #  - W*: Windows-specific
+                                                #  - ERR_*: otherwise
+                                                #E*|W*:
+                                                #  - only if SYSTEMERROR
+                                                #  - have an underlying NERROR_NUM (OS-specific number)
+
+SystemError                                     #NERROR related to OS/environment issue.
+SYSTEMERROR.errno                               #-NERROR_NUM
+                                            <13*#Can also be NERROR_NAME
+UTIL.getSystemErrorName(-NERROR_NUM)->NEROR_NAME#
 OS.constants.errno.NERROR_NAME                  #NERROR_NUM
-                                                #OS-specific
-NERROR.errno                                    #NERROR_NAME (same as NERROR.code) or -NERROR_NUM (as negative number)
-UTIL.getSystemErrorName(-NERROR_NUM)
- ->NERROR_NAME                                  #
-NERROR.syscall                                  #STR (e.g. 'access')
-NERROR.path|dest                                #Src|dest 'PATH', if any
-NERROR.address|port                             #HOST|PORT, if any
-NERROR.info                                     #Extra info, if any
+
+SYSTEMERROR.syscall                             #STR (e.g. 'access')
+SYSTEMERROR.path|dest                           #Src|dest 'PATH', if any
+SYSTEMERROR.address|port                        #HOST|PORT, if any
+SYSTEMERROR.info                                #Extra info, if any
 
 
                                              /=+===============================+=\
