no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -2266,6 +2266,13 @@ kill(PID_INT[, 'SIGNAME'|SIGNUM])               #Sends a signal (def: "SIGTERM")
                                                 #If PID_INT is negative, targets also descendants (Unix only)
 OS.constants.signals.SIGNAME                    #SIGNUM
                                                 #SIGNAME is OS-agnostic, SIGNUM is OS-specific
+                                                #All OS miss SIGEMT SIGCLD SIGRTMIN SIGRTMAX
+                                                #Linux misses SIGINFO
+                                                #Mac misses SIGPOLL SIGPWR SIGUNUSED
+                                                #Linux|Mac miss SIGBREAK
+                                                #Windows signals are emulated by Node.js and only for:
+                                                #  - process.kill(): SIGINT SIGTERM SIGKILL
+                                                #  - process.on(): SIGINT SIGABRT SIGHUP SIGBREAK SIGWINCH SIGILL SIGFPE SIGSEGV
 on('SIGNAL', FUNC('SIGNAL'))                    #Fires when signal emitted on current process.
 
 on('unhandledRejection, FUNC(VAL, PROMISE))     #When PROMISE:
