no commit message

--- a/Languages/Language_processing/Post_processing/JavaScript/babel.node_cli.txt
+++ b/Languages/Language_processing/Post_processing/JavaScript/babel.node_cli.txt
@@ -91,7 +91,7 @@ ALTERNATIVES ==>                  #Must choose either:
                                              \=+===============================+=/
 
 
-VERSION ==>                       #3.2.1
+VERSION ==>                       #3.3.2
 
 require('core-js')                #Polyfills all
                                   #Prints some annoying messages on postinstall unless ENVVAR ADBLOCK set
@@ -875,13 +875,28 @@ string/trim-end                   #
 string/trim-start                 #
 symbol/description                #
 promise/all-settled               #
+global-this                       #
 
 STAGE 3 ==>                       #
-global-this                       #
+promise/any                       #
+string/replace-all                #
 
 STAGE 2 ==>                       #
 array/is-template-object          #
-promise/any                       #
+[async-]iterator/as-indexed-pairs #
+[async-]iterator/drop             #
+[async-]iterator/every            #
+[async-]iterator/filter           #
+[async-]iterator/find             #
+[async-]iterator/flat-map         #
+[async-]iterator/for-each         #
+[async-]iterator/from             #
+[async-]iterator/map              #
+[async-]iterator/reduce           #
+[async-]iterator/some             #
+[async-]iterator/take             #
+[async-]iterator/to-array         #
+map/upsert                        #
 set/difference                    #
 set/intersection                  #
 set/symmetric-difference          #
@@ -889,9 +904,9 @@ set/union                         #
 set/is-disjoint-from              #
 set/is-subset-of                  #
 set/is-superset-of                #
-string/replace-all                #
 symbol/dispose                    #
 symbol/async-dispose              #
+weak-map/upsert                   #
 
 STAGE 1 ==>                       #
 array/last-index                  #
@@ -915,7 +930,6 @@ map/of                            #
 map/reduce                        #
 map/some                          #
 map/update                        #
-map/update-or-insert              #
 math/clamp                        #
 math/deg-per-rad                  #
 math/degrees                      #
