no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -1103,7 +1103,7 @@ unicorn/prevent-abbreviations    ##Prevent abbreviations/shortnames for variable
                                  ##  - checkDefaultAndNamespaceImports BOOL (def: false): check "import ... from" and "import * as ... from"
                                  ##  - checkShorthandImports BOOL (def: false): check "import {VAR} from"
                                  ##  - checkShorthandProperties BOOL (def: false): check "const {VAR} = VAL"
-                                 ##  - checkProperties BOOL (def: true): check OBJ.VAR
+                                 ##  - checkProperties BOOL (def: false): check OBJ.VAR
                                  ##  - checkVariables BOOL (def: true): check VAR
                                  ##  - checkFilenames BOOL (def: true)
 unicorn/no-keyword-prefix [OBJ]  ##Prevent variables names that start with OBJ.blacklist (def: ['new', 'class'])
@@ -1528,7 +1528,7 @@ no-useless-concat                 #Avoid STR_LIT + STR2_LIT
 prefer-template                   #Avoid STR + STR2, prefer `...`
 no-template-curly-in-string       #Avoid ${} inside "" or ''
 
-unicorn/*                        ##Module "eslint-plugin-unicorn" (12.0.2)
+unicorn/*                        ##Module "eslint-plugin-unicorn" (12.1.0)
 unicorn/prefer-starts-ends-with  ##Must use STR.startsWith|endsWith() when possible
 unicorn/prefer-string-slice      ##Must use STR.slice() instead of STR.substr|substring()
 
