no commit message

--- a/Languages/Metaprogramming/Parsing/AST_format/TypeScript/tsestree.format.txt
+++ b/Languages/Metaprogramming/Parsing/AST_format/TypeScript/tsestree.format.txt
@@ -372,9 +372,10 @@ class ... { VAR!: TYPE; ... }     #  - [definite BOOL]
                                              \=+===============================+=/
 
 
-VAR is TYPE                       #Child of TS_TYPE, type 'TSTypePredicate':
+[asserts] VAR [is TYPE]           #Child of TS_TYPE, type 'TSTypePredicate':
                                   #  - parameterName IDENTIFIER|TS_THIS_TYPE
-                                  #  - typeAnnotation TS_TYPE_ANNOTATION
+                                  #  - [typeAnnotation TS_TYPE_ANNOTATION]
+                                  #  - asserts BOOL
 
 
                                              /=+===============================+=\
