no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -15,7 +15,7 @@
 PURPOSE ==>                                     #Execute JavaScript code server-side
                                                 #Based on Chrome JavaScript engine V8
 
-VERSION ==>                                     #12.11.1 (current), 10.16.3 (active LTS), 8.16.2 (active LTS)
+VERSION ==>                                     #12.12.0 (current), 10.16.3 (active LTS), 8.16.2 (active LTS)
                                                 #Branches:
                                                 #  - "current": latest major version. New one every 0.5 years
                                                 #  - LTS: every even-numbered version
@@ -246,6 +246,8 @@ SYSTEMERROR.syscall                             #STR (e.g. 'access')
 SYSTEMERROR.path|dest                           #Src|dest 'PATH', if any
 SYSTEMERROR.address|port                        #HOST|PORT, if any
 SYSTEMERROR.info                                #Extra info, if any
+
+--enable-source-maps                         12*#Use source maps for ERROR.stack
 
 
                                              /=+===============================+=\
