--- a/Languages/Metaprogramming/Source_maps/Stack_traces/node-source-map-support.node.txt
+++ b/Languages/Metaprogramming/Source_maps/Stack_traces/node-source-map-support.node.txt
@@ -5,7 +5,10 @@
 
 
 
-ALTERNATIVES ==>                  #  - node-source-map-support (prefer for Node):
+ALTERNATIVES ==>                  #  - --enable-source-maps (prefer for Node >=12.12.0)
+                                  #     - Node only
+                                  #     - built-in
+                                  #  - node-source-map-support (prefer for Node <12.12.0):
                                   #     - Node or Browser (Chrome only)
                                   #     - high-profile
                                   #     - uses Error.prepareStackTrace()
