no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -355,6 +355,7 @@ require.cache[ID]                               #[MODULE.]require(STR) cache (i.
                                                 #ID is require.resolve(STR) result
                                                 #Builtins are not cached.
                                                 #Can delete it to remove cache, or restart current code.
+syncBuiltinESMExports()                      12*#Must be done after monkey-patching core modules so that dynamic import(...) can use it
 
 MODULE.require                                  #Reference to require
 
@@ -432,7 +433,7 @@ import|export ...                               #ES modules
                                                 #     - but can use dynamic import(), which allows importing ESM
                                                 #Loading:
                                                 #  - use same algorithm to find node_modules
-                                                #  - can import FILE.json
+                                                #  - can import FILE.json if --experimental-json-modules
                                                 #  - cannot omit file extension or use index.js
                                                 #     - unless --es-module-specifier-resolution=node (def: 'explicit')
                                                 #  - cannot import FILE.node
@@ -518,6 +519,8 @@ NODE-ONLY RESOLVER LOGIC ==>                    #Browsers cannot:
                                                 #     - exports is the 'VAR'_ARR of exported variables
                                                 #     - execute() must call EXPORTS.VAR.get()|set(VAL) to set the value of the
                                                 #       exported variables
+
+--force-context-aware                        12*#Forbids native modules that do side effects during initialization
 
 
                                              /=+===============================+=\
@@ -1241,6 +1244,8 @@ TLS.createSecureContext(OBJ)->SECURECONTEXT     #OBJ:
                                              11*#     - TLSv1.3 only for Node >=11
                                              12*#  - enableTrace BOOL (def: false): print TLS packets to stderr, for debuggin
                                              12*#  - hints NUM: like DNS.lookup()
+                                             12*#  - privateKeyIdentifier STR: instead of OPTS.key, use a private key within OpenSSL engine
+                                             12*#  - privateKeyEngine STR: OpenSSL engine usedwith privateKeyIdentifier
 TLS.rootCertificates                         12*#STR_ARR. Default well-known root CAs
                                              12*#Are known builtin, either:
                                              12*#  - node --use-bundled-ca (def): Mozilla CA store
@@ -1932,6 +1937,14 @@ WRENCH.readdirSync[Recursive]
 DIRENT.isFile|Directory|Block|CharacterDevice|
  FIFO|Socket|SymbolicLink()->BOOL            10*#
 DIRENT.name                                  10*#STR
+
+opendir(DIR[, OPTS], FUNC(ERROR, FSDIR))     12*#Like readdir() but iteratively. Unordered.
+                                             12*#OPTS:
+                                             12*#  - encoding 'ENCODING'
+FSDIR.path                                   12*#'DIR' (as specified in input)
+FSDIR.read()->PROMISE_DIRENT|null            12*#Get next directory entry or null if no more
+FSDIR.close()->PROMISE                       12*#Cleanup file descriptor after iteration done
+FSDIR                                        12*#Is ASYNC_ITERATOR iterating over PROMISE_DIRENT, doing read() and close()
 
 open(PATH, STR|NUM[, MODE], FUNC(ERROR, FD_INT))#Open a file and return a file descriptor.
                                                 #STR are flags: "r|w|a[s|x][+]":
