no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -783,7 +783,7 @@ ReadStream                                      #ISTREAM of a text terminal.
 READSTREAM.isRaw                                #If false (def):
                                                 #  - echoes input to output
                                                 #  - buffer input until next newline (i.e. line-wise input instead of character-wise)
-                                                #  - buffered input can be removed with Backspace|Delete)
+                                                #  - buffered input can be removed with Backspace|Delete
                                                 #  - can quit with CTRL-D, CTRL-C, CTRL-Z
                                                 #  - emit sounds (bell)
                                                 #  - normalize any non-ASCII to ASCII (by removing MSB)
