no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -1958,6 +1958,7 @@ you-dont-need-lodash-underscore/ ##Avoid Underscore|Lodash when there is a ES6 e
                                  ##    every|filter|map|reduce[Right]|some|includes|slice|replace() (and aliases) ->
                                  ##    ARR.concat|[last]IndexOf|join|reverse|fill|find[Index]|forEach|
                                  ##    every|filter|map|reduce[Right]|some|includes|slice|replace()
+                                 ##  - _.each() -> Object.entries(), ARR.forEach()
                                  ##  - _.size() -> ARR.length
                                  ##  - _.isNaN() -> Number.isNaN()
                                  ##  - _.isInteger() -> Number.isInteger()
@@ -1990,7 +1991,7 @@ you-dont-need-lodash-underscore/ ##Avoid Underscore|Lodash when there is a ES6 e
                                  ##  - _.isEmpty() -> Object.keys().length
                                  ##  - _.keyBy() -> ARR.reduce()
                                  ##  - _.inRange() -> < >
-                                 ##Node module "eslint-plugin-you-dont-need-lodash-underscore" (6.7.2)
+                                 ##Node module "eslint-plugin-you-dont-need-lodash-underscore" (6.8.0)
 
 
                                              /=+===============================+=\
