no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -15,7 +15,7 @@
 PURPOSE ==>                                     #Execute JavaScript code server-side
                                                 #Based on Chrome JavaScript engine V8
 
-VERSION ==>                                     #12.13.0 (current), 10.16.3 (active LTS), 8.16.2 (active LTS)
+VERSION ==>                                     #13.0.0 (current), 12.13.0 (active LTS), 10.16.3 (active LTS), 8.16.2 (active LTS)
                                                 #Branches:
                                                 #  - "current": latest major version. New one every 0.5 years
                                                 #  - LTS: every even-numbered version
@@ -990,6 +990,8 @@ DEFAULT REPL ==>                                #Uses REPL except:
                                                 #  - OPTS.breakEvalOnSigint true
                                                 #  - can override defaults util.inspect() options (for OPTS.writer()) with util.inspect.replDefaults
 
+ENVVAR NODE_REPL_EXTERNAL_MODULE                #'PATH' to a file to execute instead of built-in REPL
+
 
                                              /=+===============================+=\
                                             /  :                               :  \
@@ -1361,12 +1363,6 @@ TLSSOCKER.on('keylog', FUNC(BUFFER))         12*#Can be emitted multiple times: 
                                              \=+===============================+=/
 
 
---http-parser=legacy|llhttp                  11*#Low-level HTTP parsing library:
-                                             11*#  - legacy
-                                             11*#  - llhttp: faster
-                                            <12*#Def: legacy
-                                             12*#Def: llhttp
-
 STATUS_CODES                                    #{ STATUS_NUM: 'STATUS_NAME', ... }
                                                 #Misses 419
 METHODS                                         #STR_ARR of HTTP methods, including common ones, WEBDEV and more obscure ones
@@ -1389,7 +1385,7 @@ HTTPSERVER.on("clientError",FUNC(ERR,TCPSOCKET))#Fired on connection problem.
                                                 #  - bytesParsed NUM
                                                 #  - rawPacket BUFFER
 
-HTTPSERVER.maxHeadersCount                      #Maximum number of headers incoming (def: 1000, 0 for unlim)
+HTTPSERVER|REQ.maxHeadersCount                  #Maximum number of headers incoming (def: 1000, 0 for unlim)
 HTTPSERVER.maxHeaderSize
 --max-http-header-size NUM                    8*#Def: 8KB. If above, fires 'clientError'.
                                              12*#If no 'clientError' handler, returns 431.
@@ -1398,8 +1394,10 @@ RES|CLIENTREQ.setTimeout(UINT[, FUNC()])        #Call underlying TCPSOCKET.*
 RES|CLIENTREQ.on("timeout", FUNC())             #Unless 'timeout' event handler overriden, calls RES|CLIENTREQ.socket.destroy()
 HTTPSERVER.setTimeout(UINT[, FUNC()])           #Calls RES.setTimeout(...) on each new RES
 HTTPSERVER.timeout                              #Same
---http-server-default-timeout NUM            12*#Default value (def: 12e4, i.e. 2 mins) of HTTPSERVER.setTimeout|timeout
+--http-server-default-timeout NUM            12*#Default value of HTTPSERVER.setTimeout|timeout
                                              12*#0 to disable
+                                             12*#Def: 12e4, i.e. 2 minutes
+                                             13*#Def: 0
 HTTPSERVER.on("timeout", FUNC(RES))             #Called when any RES 'timeout' event is fired
 HTTPSERVER.headersTimeout                    11*#Like HTTPSERVER.timeout but for the time taken to receive HTTP headers.
                                              11*#Def: 4e4, i.e. 40 secs
@@ -1435,6 +1433,8 @@ REQ.flushHeaders()                              #Send the headers right away, in
                                                 #Useful if headers are given quickly but body retrieval takes time.
 REQ.on('aborted', FUNC())                       #Aborted by client
 REQ.aborted                                   8*#BOOL
+REQ.reusedSocket                             13*#BOOL. Whether underlying TCP has been used by another REQ before.
+                                             13*#This can happen when using an AGENT with a high keepAliveMsecs.
 
 RES                                             #OSTREAM, writing the body:
                                                 #  - headers must be set first
@@ -3148,6 +3148,8 @@ inspect(VAL[, OBJ])                             #Print function used by repl. Re
                                              10*#  - sorted BOOL (def: false) or FUNC('KEY', 'KEY2')->-1|0|1
                                              11*#  - getters BOOL (def: false) or 'get|set' (only getters with|without a set()):
                                              11*#    show getters values
+                                                #Circular references are printed correctly.
+                                             13*#  - a pointer to the reference is shown
                                                 #Can change inspect.defaultOptions
                                                 #require("buffer").INSPECT_MAX_BYTES: number of bytes printed for BUFFER
                                                 #(def: 50)
